# random-load

./: Cargo.toml  README.md  config-1.yaml  dockerfile
src/: cpu.rs  main.rs  memory.rs
