[package]
name = "random-load"
describe = "random-load-for-k8s-cli"
version = "0.1.0"
authors = ["charstal <charstal_h@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
num_cpus = "1.0"
clap = {version = "2.33", features = ["yaml"]}
yaml-rust = "0.4"